Sprint 3: flujo de aprobación de transferencias + UX dashboard
- Movimiento.estado (APROBADO/PENDIENTE/RECHAZADO): transferencias de usuarios no-Admin
  se guardan como PENDIENTE sin mover stock/área; los Admins las aprueban o rechazan
  desde el panel "⏳ Pendientes" en Movimientos (con contador en tiempo real en el botón)
- MovimientoRepository: addMovimientoPendiente (SELECT FOR UPDATE), findPendientesTransferencias,
  aprobarTransferencia (transacción atómica), rechazarTransferencia
- DemoDataStore: soporte completo del flujo de aprobación en modo demo
- sql/migrations/002_movimiento_estado.sql: migración incremental para instalaciones existentes
- DashboardController: banner text dinámico ("N agotados · M bajo stock"), tooltips en health bar
- AlertasController: staggeredFadeInUp en showProductoInfo, Enter key en tablas
- CategoriasController: mejoras UX (Ctrl+F, getItems().setAll())
- AnimationUtils: pulse, springIn, fadeOut, flashClass (row danger/warning flash)
- AppExecutor: ajustes al pool de hilos compartido
- DatabaseConfig: SSL configurable via DB_SSL_MODE, .env busca en %APPDATA%\SIBIM\ primero
- MovimientosController: celda stock reutiliza nodos (fix render), Ctrl+F, statCardPop,
  springIn en empty state, flash+fadeOut antes de eliminar fila
- styles.css: btn-warning-outline, muted-sm, correcciones hover en chips y presets
- README: documentado flujo de aprobación, migraciones, DB_SSL_MODE, rutas de producción